added dotenv | added registerProduct
