# src/controllers/products/allProductsController.ts
@@ -4,14 +4,14 @@ import { db } from "../../db";
 @Route("/products")
 export class AllProducts extends Controller {
     @Get("/all")
-    public async allProducts(): Promise<ErrorReturn | Product> {
+    public async allProducts(): Promise<Product[] | ErrorReturn> {
         const products = await db.product.findMany({
             include: { imageLinks: true },
         });
 
         console.log(products[0]);
 
-        return {} as Product;
+        return products;
     }
 }
 import ErrorReturn from "../../moddels/errorReturn";
